--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -6,7 +6,7 @@
       "name": "HW2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOiD5J7kmKwFrLe0Gc0tIo3",
+      "authorship_tag": "ABX9TyNrdK+V7rA1Spp1tWsY4wYN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1923,7 +1923,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Figure 7: Our forecast for the non-stationary time series aac.us using the ARIMA model.  Note the sign of overfitting: the forecast is the delayed series by 1 timestep."
+        "Figure 7: Our forecast for the non-stationary time series aac.us using the ARIMA model.  Note that the forecast trails the real series by exactly 1 value, a potential sign of overfitting."
       ]
     },
     {
@@ -1996,7 +1996,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Figure 8: Our forecast for the non-stationary time series aac.us using the ARIMA model. Note the sign of overfitting: the forecast is the delayed series by 1 timestep."
+        "Figure 8: Our forecast for the non-stationary time series aac.us using the ARIMA model. Note that the forecast trails the real series by exactly 1 value, a potential sign of overfitting."
       ]
     },
     {
@@ -2006,8 +2006,21 @@
         "colab_type": "text"
       },
       "source": [
-        "In both cases, the time series didn't fit properly and overfit much more compared to the proper integrative factor.  Thus, the proper integrative factor is necessary to get as much signal out of the time series as possible."
+        "In both cases, the time series didn't fit properly and overfit much more compared to the proper integrative factor.  I assume this is a case of overfitting, since being ahead of the series by 1 timestep is also a case of overfitting.  Therefore, without the proper integrative factor, much less signal can be obtained from the series."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WvCvSNgm1nBL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
