--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -6,7 +6,7 @@
       "name": "HW3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOoDQZybDP1Z+4u3jrT6F3A",
+      "authorship_tag": "ABX9TyP8uStmya1pPEZ63h028Z0z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,7 +213,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Figure 1: Plot of the count of the number of uber rides over time, from April to September of 2014"
+        "Figure 1: Plot of the count of the number of daily uber rides over time, from April to September of 2014"
       ]
     },
     {
