--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HW5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOktXoJNFSZejeN/pC2FDra",
+      "authorship_tag": "ABX9TyMs2X6HYOz2rD6TTTa62nnl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1078,7 +1078,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Figure 1: Time series plots of multiple objects and their flux and errors.  Note that the x-axis is time, represented by the label mjd.  Note also the colorcode indicates which band each datapoint is in: points that are more red are in lower bands, while points that are more blue are in higher bands."
+        "Figure 1: Time series plots of multiple objects and their flux and errors.  Note that the x-axis is time, represented by the label mjd.  Note also the colorcode indicates which band each datapoint is in: points that are more red are in lower bands, while points that are more blue are in higher bands.  Significant clustering appears in all plots, one such example in Object 2103, showing the 3 clusters along flux=0 along with a cluster directed upwards at around mjd=60250."
       ]
     },
     {
@@ -1118,7 +1118,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Original lightcurve: 3rd (skewness) and 4th (kurtosis) moments."
+        "Original lightcurve: 3rd (skewness) and 4th (kurtosis) moments.  Moments are always useful to have for a dataset, are continuous, and are unbounded."
       ]
     },
     {
@@ -1128,7 +1128,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Standardized lightcurve: median, straight line fit.\n"
+        "Standardized lightcurve: median, straight line fit.  Median is a good indicatior of the middle of the dataset when significant outliers exist, and will exist as a positive and (potentially) unbounded variable.  The line fit statistics are always useful--the slope and intercept can also technically be unbounded, but they will come as two separate variables.\n"
       ]
     },
     {
@@ -1138,7 +1138,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Metadata: decl, ddf."
+        "Metadata: decl, ddf.  decl indicates the position in the sky, and is potentially unbounded. ddf is a binary variable, indicating the type of survey used for the data."
       ]
     },
     {
