--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HW5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMs2X6HYOz2rD6TTTa62nnl",
+      "authorship_tag": "ABX9TyN1zpz1qU8HoLe+zF8pcATn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1118,7 +1118,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Original lightcurve: 3rd (skewness) and 4th (kurtosis) moments.  Moments are always useful to have for a dataset, are continuous, and are unbounded."
+        "Original lightcurve: 3rd (skewness) and 4th (kurtosis) moments.  Like mean and variance, moments are always useful to have for a dataset.  They are continuous and are unbounded."
       ]
     },
     {
