--- a/HW7/HW7.ipynb
+++ b/HW7/HW7.ipynb
@@ -6,7 +6,7 @@
       "name": "HW7.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNgAuwnhe3fY/iTs4JT2DmR",
+      "authorship_tag": "ABX9TyOiWSm89AK7Xo2vqwtQS6/3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "!pip install PyGithub\n",
         "!pip install pydub"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
         "import pylab as pl\n",
         "%pylab inline"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
         "import pylab as pl\n",
         "%pylab inline\n"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +172,7 @@
         "\n",
         "drive.mount(\"/content/gdrive\")\n"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
       "source": [
         "cd /content/gdrive/My\\ Drive/"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
       "source": [
         "cd MLTSA2020"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
       "source": [
         "cd data"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +357,7 @@
         "#.repos_url#(\"Speech_Recognition\")\n",
         "wavfiles"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -427,7 +427,7 @@
       "source": [
         "cd ../"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +465,7 @@
         "y = np.array([[k for k,v in colors.items() for i in range(5)]])[0]\n",
         "y"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -499,7 +499,7 @@
         "for k,v in colors.items():\n",
         "        print(k,v)\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +576,7 @@
         "    ax.axis('off')              \n",
         "    pl.legend()"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -608,17 +608,17 @@
       "metadata": {
         "id": "x_zGXM0fm9Sq",
         "colab_type": "code",
+        "outputId": "51e7150d-636e-41b4-c2ab-a2c85b6ee4a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "51e7150d-636e-41b4-c2ab-a2c85b6ee4a9"
+        }
       },
       "source": [
         "wavfiles = np.array([w[1] for w in wavfiles])\n",
         "print (\"the size of the full data set is :\", wavfiles.shape)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -654,11 +654,11 @@
       "metadata": {
         "id": "RNPHnP3ZH2bN",
         "colab_type": "code",
+        "outputId": "80cbbd19-812d-43c8-8aae-9a6bdf951eee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
-        },
-        "outputId": "80cbbd19-812d-43c8-8aae-9a6bdf951eee"
+        }
       },
       "source": [
         "print(\"calculating a distance matrix for the full files would requires \" + \n",
@@ -670,7 +670,7 @@
         "print(\"subsampling by a factor 100 requires \" + \n",
         "      f\"{wavfiles[0][::100].shape[0]**2*64/8e6} MB of memory\")\n"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,16 +725,16 @@
       "metadata": {
         "id": "hzZP0CuWH54L",
         "colab_type": "code",
+        "outputId": "9ff264cf-3dec-48a6-e541-43f5522cab39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "9ff264cf-3dec-48a6-e541-43f5522cab39"
+        }
       },
       "source": [
         "X.shape, X.std(axis=1)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,11 +757,11 @@
       "metadata": {
         "id": "-k3CrLTcH64R",
         "colab_type": "code",
+        "outputId": "1a02028d-b7f9-42f0-ea20-58c2c6159e77",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 624
-        },
-        "outputId": "1a02028d-b7f9-42f0-ea20-58c2c6159e77"
+        }
       },
       "source": [
         "pl.rcParams['font.size'] = 20\n",
@@ -774,7 +774,7 @@
         "pl.xlabel(\"time (unknown units)\", fontsize=20)\n",
         "pl.ylabel(\"intensity\", fontsize=20);"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -806,11 +806,11 @@
       "metadata": {
         "id": "D3OdyzRLH_Lc",
         "colab_type": "code",
+        "outputId": "1836ebd3-377c-4775-f9ae-70b93633079f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 624
-        },
-        "outputId": "1836ebd3-377c-4775-f9ae-70b93633079f"
+        }
       },
       "source": [
         "pl.rcParams['font.size'] = 20\n",
@@ -823,7 +823,7 @@
         "pl.xlabel(\"time (unknown units)\", fontsize=20)\n",
         "pl.ylabel(\"normalized intensity\", fontsize=20);"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -881,11 +881,11 @@
       "metadata": {
         "id": "OKp6vcysIUPY",
         "colab_type": "code",
+        "outputId": "d519557c-c384-48e0-f8c2-0e25109b318a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "d519557c-c384-48e0-f8c2-0e25109b318a"
+        }
       },
       "source": [
         "pl.imshow(cdist(X[:,::steps], \n",
@@ -898,7 +898,7 @@
         "         cmap=\"RdBu\")\n",
         "pl.title(\"L1 distance metric\");"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -943,11 +943,11 @@
       "metadata": {
         "id": "FpJb4D8ZIVex",
         "colab_type": "code",
+        "outputId": "ddcce164-3bc4-4416-bfe6-d1e68b9225a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "ddcce164-3bc4-4416-bfe6-d1e68b9225a6"
+        }
       },
       "source": [
         "pl.imshow(cdist(np.atleast_2d(X[1][::steps]).T, \n",
@@ -969,7 +969,7 @@
         "         fontsize=15);\n",
         "pl.axis('off');"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1027,11 +1027,11 @@
       "metadata": {
         "id": "FZrcRm9jMJGe",
         "colab_type": "code",
+        "outputId": "2e246f2c-e48d-4eb1-bb07-24d0828e1b7e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "2e246f2c-e48d-4eb1-bb07-24d0828e1b7e"
+        }
       },
       "source": [
         "pl.imshow(np.log10(cdist(np.atleast_2d(X[1][::steps]).T, \n",
@@ -1053,7 +1053,7 @@
         "         fontsize=15);\n",
         "pl.axis('off');"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1119,11 +1119,11 @@
       "metadata": {
         "id": "X6e9vUAJMKqe",
         "colab_type": "code",
+        "outputId": "7c04bc2f-669d-49f4-c0cb-85f20fec260e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 883
-        },
-        "outputId": "7c04bc2f-669d-49f4-c0cb-85f20fec260e"
+        }
       },
       "source": [
         "\n",
@@ -1140,7 +1140,7 @@
         "        pl.axis('off');\n",
         "\n"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1310,11 +1310,11 @@
       "metadata": {
         "id": "H2ZiGh_ha0Qj",
         "colab_type": "code",
+        "outputId": "562a8358-1ee7-4432-c2a4-289a8f0549df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 866
-        },
-        "outputId": "562a8358-1ee7-4432-c2a4-289a8f0549df"
+        }
       },
       "source": [
         "restep=10\n",
@@ -1322,7 +1322,7 @@
         "pl.figure(figsize(10,3))\n",
         "pl.plot(X[0][::restep]);"
       ],
-      "execution_count": 394,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1392,11 +1392,11 @@
       "metadata": {
         "id": "vsRJs7Sr6gal",
         "colab_type": "code",
+        "outputId": "cd52acf9-597e-4eb2-c16c-2f1b15e9971a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 848
-        },
-        "outputId": "cd52acf9-597e-4eb2-c16c-2f1b15e9971a"
+        }
       },
       "source": [
         "# DTW distance to a file with a different sound bite, normalized\n",
@@ -1405,7 +1405,7 @@
         "pl.plot(X[0][::restep])\n",
         "pl.plot(X[1][::restep]);"
       ],
-      "execution_count": 433,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1468,11 +1468,11 @@
       "metadata": {
         "id": "Qmlv2BO14m7H",
         "colab_type": "code",
+        "outputId": "1b70bf2d-529f-481a-d35c-3e3f6b3a1e49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 503
-        },
-        "outputId": "1b70bf2d-529f-481a-d35c-3e3f6b3a1e49"
+        }
       },
       "source": [
         "# DTW distance to a file with a different sound bite, normalized\n",
@@ -1481,7 +1481,7 @@
         "pl.plot(wavfiles[0][::restep])\n",
         "pl.plot(wavfiles[1][::restep])"
       ],
-      "execution_count": 442,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1563,11 +1563,11 @@
       "metadata": {
         "id": "1hLPbb0H4oNH",
         "colab_type": "code",
+        "outputId": "1078b224-bab7-4924-c661-3883f32ba284",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 467
-        },
-        "outputId": "1078b224-bab7-4924-c661-3883f32ba284"
+        }
       },
       "source": [
         "# DTW distance to a file with a different sound bite\n",
@@ -1576,7 +1576,7 @@
         "pl.plot(wavfiles[0][::restep])\n",
         "pl.plot(wavfiles[1][::restep])"
       ],
-      "execution_count": 408,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1659,20 +1659,19 @@
       "metadata": {
         "id": "u0sQGSj47GVJ",
         "colab_type": "code",
+        "outputId": "335c4cca-46f1-4779-9371-5af10cb8e6da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 476
-        },
-        "outputId": "335c4cca-46f1-4779-9371-5af10cb8e6da"
+        }
       },
       "source": [
-        "# what is most similar to the first time series? (other than itself)\n",
         "distances = np.zeros(25) * np.nan\n",
         "for i in range(25):\n",
         "    print(i, \"/25\")\n",
         "    distances[i], _, _ = dtw(X[0][::restep], X[i][::restep]);"
       ],
-      "execution_count": 398,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1712,16 +1711,16 @@
       "metadata": {
         "id": "pUhA57xH7TYf",
         "colab_type": "code",
+        "outputId": "30de17a8-367c-436f-da55-1fe67a8abe18",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "30de17a8-367c-436f-da55-1fe67a8abe18"
+        }
       },
       "source": [
         "distances.argsort()"
       ],
-      "execution_count": 399,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1743,17 +1742,17 @@
       "metadata": {
         "id": "_TyppBQE7VsE",
         "colab_type": "code",
+        "outputId": "a13be3bb-5a80-44f6-8bad-fd9d052db088",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "a13be3bb-5a80-44f6-8bad-fd9d052db088"
+        }
       },
       "source": [
         "print(\"Based on its nearest neighbor the first sound bite says...\")\n",
         "print(y[distances.argsort()[1]])"
       ],
-      "execution_count": 400,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1782,7 +1781,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Task 4:"
+        "# Nearest Neighbor of 20th Soundbite"
       ]
     },
     {
@@ -1790,20 +1789,19 @@
       "metadata": {
         "id": "AljyK9847iPR",
         "colab_type": "code",
+        "outputId": "fd732a4a-2105-4ce7-915e-2586036aa89c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 476
-        },
-        "outputId": "fd732a4a-2105-4ce7-915e-2586036aa89c"
+        }
       },
       "source": [
-        "# what is most similar to the first time series? (other than itself)\n",
         "distancesE = np.zeros(25) * np.nan\n",
         "for i in range(25):\n",
         "    print(i, \"/25\")\n",
         "    distancesE[i] = euclidean(X[19], X[i]);"
       ],
-      "execution_count": 409,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1843,16 +1841,16 @@
       "metadata": {
         "id": "bgojh98z0YTS",
         "colab_type": "code",
+        "outputId": "138daaf9-918a-4d58-e5b0-de9f3a3aca23",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "138daaf9-918a-4d58-e5b0-de9f3a3aca23"
+        }
       },
       "source": [
         "distancesE.argsort()"
       ],
-      "execution_count": 410,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1874,11 +1872,11 @@
       "metadata": {
         "id": "MJdBddyua3Eh",
         "colab_type": "code",
+        "outputId": "c5abef34-be0f-481c-ffb2-ae2fecb5ed99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "c5abef34-be0f-481c-ffb2-ae2fecb5ed99"
+        }
       },
       "source": [
         "print(\"Based on its nearest neighbor and Euclidian distance \",\n",
@@ -1886,7 +1884,7 @@
         "print(y[distancesE.argsort()[1]])\n",
         "print(\"Correct!\") if y[distancesE.argsort()[1]] == y[19] else print(\"Sorry...\")"
       ],
-      "execution_count": 416,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1904,20 +1902,19 @@
       "metadata": {
         "id": "S9UkRr569HN9",
         "colab_type": "code",
+        "outputId": "07a5974a-4ad2-49ae-98bb-f6f3a3c2b20d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 476
-        },
-        "outputId": "07a5974a-4ad2-49ae-98bb-f6f3a3c2b20d"
+        }
       },
       "source": [
-        "# what is most similar to the first time series? (other than itself)\n",
         "distancesDTW = np.zeros(25) * np.nan\n",
         "for i in range(25):\n",
         "    print(i, \"/25\")\n",
         "    distancesDTW[i], _, _ = dtw(X[19][::steps], X[i][::steps])"
       ],
-      "execution_count": 429,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1957,11 +1954,11 @@
       "metadata": {
         "id": "-9lWeNCgAEC_",
         "colab_type": "code",
+        "outputId": "88efb889-8f50-459b-9dbc-845f2080ee49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "88efb889-8f50-459b-9dbc-845f2080ee49"
+        }
       },
       "source": [
         "print(\"Based on its nearest neighbor and DTW distance \",\n",
@@ -1969,7 +1966,7 @@
         "print(y[distancesDTW.argsort()[1]])\n",
         "print(\"Correct!\") if y[distancesDTW.argsort()[1]] == y[19] else print(\"Sorry...\")"
       ],
-      "execution_count": 430,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1980,6 +1977,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oy-yn75WUVbX",
+        "colab_type": "text"
+      },
+      "source": [
+        "So our algorithm isn't infallible.  The Euclidian distance is likely more wrong, however."
       ]
     },
     {
@@ -2037,16 +2044,16 @@
       "metadata": {
         "id": "DmNqEuQzbSze",
         "colab_type": "code",
+        "outputId": "d8b4f989-88db-4b34-f1fe-8926b6a61cef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
-        },
-        "outputId": "d8b4f989-88db-4b34-f1fe-8926b6a61cef"
+        }
       },
       "source": [
         "pip install tslearn"
       ],
-      "execution_count": 239,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2080,16 +2087,16 @@
       "metadata": {
         "id": "LB1XU1BbzFnI",
         "colab_type": "code",
+        "outputId": "9496b260-73a0-43c3-afd0-c31e3842c084",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "9496b260-73a0-43c3-afd0-c31e3842c084"
+        }
       },
       "source": [
         "print(\"dtw distance: \", dtw(X[0][::restep], X[1][::restep], show=True)[0]);"
       ],
-      "execution_count": 243,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2129,16 +2136,16 @@
       "metadata": {
         "id": "e_WUkX1ckGJF",
         "colab_type": "code",
+        "outputId": "63df08cc-315c-4a84-a29a-146dbadb0d0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "63df08cc-315c-4a84-a29a-146dbadb0d0f"
+        }
       },
       "source": [
         "cost"
       ],
-      "execution_count": 242,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2207,16 +2214,16 @@
       "metadata": {
         "id": "40EqBOYGzRvE",
         "colab_type": "code",
+        "outputId": "b5b53ab2-a6cc-43fb-a75b-297dd940d26a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "b5b53ab2-a6cc-43fb-a75b-297dd940d26a"
+        }
       },
       "source": [
         "print(\"dtw distance: \", dtweucl(X[0][::restep], X[1][::restep], show=True)[0]);"
       ],
-      "execution_count": 246,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
